Fix message overflow width for compact view

--- a/src/ui/views/main/components/channel/message/feed.scss
+++ b/src/ui/views/main/components/channel/message/feed.scss
@@ -88,6 +88,7 @@
 
         text-indent: -5em;
         margin-left: 4.5em;
+        max-width: calc(100% - 4.5em);
     }
 
     &__wrapper {
